# sumo-fmu-to-resqml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  radixconfig.yaml  requirements.txt
app/: Dockerfile  app.py  decoding.py  encoding.py  functionality.py  utility.py
app/_deprecated/: _decoding.py  _encoding.py  _functionality.py  deprecated.py
fmu-to-resqml/: app.py  functionality.py  utility.py  wrappers.py
fmu-to-resqml/api/: functionality.py  utility.py  wrappers.py
fmu-to-resqml/auth/: exchange.py  tokens.py  wrappers.py
notebooks/: test_api.ipynb  test_ensemble.ipynb  test_polygons.ipynb  test_surface.ipynb  test_table.ipynb
